kube/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: repository
  labels:
    name: repository
